--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
-sonar.projectKey=sonarintegration_node
+sonar.projectKey=sqp_3d1b655c8e7f26ca4e9f9fcee3a2085cef11363f
 sonar.projectName=sonarintegration
-sonar.sources=.
+sonar.sources= .
+sonar.branch.name=main
